# epub2tts

./: .gitignore  CHANGELOG.md  CHECKPOINT_MLX_INTEGRATION.md  Claude.md  EBOOKLIB_IMPLEMENTATION.md  IMPLEMENTATION_GUIDE.md  KOKORO_MLX_INTEGRATION_PLAN.md  LICENSE  METAPROMPT_3_WEBGPU_RESEARCH.md  README.md  TODO.md  TODOS.md  agent.md  comparison_results.json  pyproject.toml  pytest.ini  requirements.txt  research_subagent_metaprompt.md  run_epub_processor.py  run_full_pipeline.py  secrets_template.json  setup.py  subagent_usage.md  test_ebooklib_comparison.py  test_modern_text_processing.py  test_simple_mlx.py  test_terminal_ui_integration.py  test_ui_demo.py
.github/workflows/: claude-code.yml  lint.yml  release.yml  tests.yml
ClaudeUsage/: README.md  ci_cd_patterns.md  code_quality.md  code_style_guide.md  database_setup.md  docker_guide.md  documentation_standards.md  git_commit_guide.md  git_conventional_commits.md  git_workflow.md  house_agents.md  multi_language_guide.md  project_setup.md  project_structure.md  research_workflow.md  secrets_advanced.md  secrets_management.md  subagent_usage.md  testing_strategies.md  uv_usage.md
ClaudeUsage/pre_commit_hooks/: commit-msg  examples.md  pre-commit  setup_guide.md
ClaudeUsage/templates/: .env.example  pyproject.toml.example  secrets_template.json
checkpoints/: PHASE_2_MODERN_LIBRARY_MIGRATION_COMPLETED.md  PHASE_3_TERMINAL_UI_IMPLEMENTATION_COMPLETED.md  TTS_FIX_PLAN_2025-09-27.md
config/: default_config.yaml  regex_patterns.yaml
docs/: API.md  GIT_COMMIT_STYLE_GUIDE.md  TROUBLESHOOTING.md
docs/archive/checkpoints/: ELEVENLABS_INTEGRATION_2025-09-28.md  EPUB_PROCESSING_IMPROVEMENTS_SESSION.md  ElevenLabsTTS Plan.md  PHASE_1_MLX_TTS_FIXES_COMPLETED.md  TERMINAL_UI_ENHANCEMENT_PLAN.md  TTS_PIPELINE_COMPLETION_2025-09-28.md
docs/archive/metaprompts/: METAPROMPT_1_OMNIPARSER_EXTRACTION.md  METAPROMPT_2_REPO_REORGANIZATION.md
docs/archive/planning/: ClaudeCode_BIG_PLAN.md
docs/archive/specs/: WEB_READER_PROJECT_SPEC.md  WEB_READER_PROJECT_SPEC_v2.md
examples/: README.md  elevenlabs_example.py
scripts/: batch_convert.py  diagnose_pipeline.py  process_epub.py
src/: cli.py
src/core/: ebooklib_processor.py  epub_processor.py  pandoc_wrapper.py  text_cleaner.py
src/pipelines/: elevenlabs_tts.py  elevenlabs_tts_pipeline.py  hume_tts_pipeline.py  image_pipeline.py  orchestrator.py  tts_pipeline.py
src/text/: __init__.py  enhanced_text_cleaner.py  modern_text_processor.py
src/ui/: __init__.py  progress_tracker.py  terminal_ui.py
src/utils/: config.py  logger.py  secrets.py
tests/: test_direct_kokoro.py  test_elevenlabs_integration.py  test_elevenlabs_simple.py  test_fixes.py  test_gemma_connection.py  test_mlx_debug.py  test_pipeline_direct.py  test_sample.txt  test_simple_tts.py  test_tts_pipeline.py
tests/fixtures/epub/: README.md
tests/integration/: test_ebooklib_comparison.py  test_epub_processor.py  test_modern_text_processing.py  test_terminal_ui_integration.py
tests/unit/: test_config.py  test_pandoc_wrapper.py  test_text_cleaner.py
