[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epub2tts"
version = "0.1.0"
description = "A production-ready EPUB to TTS converter using Kokoro TTS and local VLM for image descriptions"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AutumnsGrove", email = "noreply@github.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Text Processing :: Markup",
]
requires-python = ">=3.10,<3.13"
dependencies = [
    # Core dependencies
    "pypandoc>=1.13",
    "pypandoc-binary>=1.15",
    "pyyaml>=6.0",
    "regex>=2023.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",

    # Text processing
    "nltk>=3.8",
    "spacy>=3.7.0",
    "ftfy>=6.1.0",
    "ebooklib>=0.19",
    "clean-text>=0.6.0",
    "langchain-text-splitters>=0.3.0",

    # Audio/TTS
    "pydub>=0.25.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "mlx-audio>=0.1.0",
    "kokoro>=0.9.2",
    "torch>=2.0.0",
    "mlx>=0.18.0",
    "elevenlabs>=1.0.0",

    # Image processing
    "Pillow>=10.0.0",
    "transformers>=4.36.0",

    # Utilities
    "tqdm>=4.66.0",
    "click>=8.1.0",
    "loguru>=0.7.0",
    "structlog>=25.0.0",
    "rich>=13.0.0",

    # Data structures
    "dataclasses-json>=0.6.0",
    "pydantic>=2.0.0",

    # Async support
    "aiofiles>=23.0.0",
    "asyncio-throttle>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/AutumnsGrove/epub2tts"
Repository = "https://github.com/AutumnsGrove/epub2tts"
Issues = "https://github.com/AutumnsGrove/epub2tts/issues"

[project.scripts]
epub2tts = "epub2tts.cli:main"
process-epub = "scripts.process_epub:process_epub"
batch-convert = "scripts.batch_convert:batch_convert"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
epub2tts = ["config/*.yaml"]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --strict-config --verbose"

[tool.mypy]
python_version = "3.8"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true